# SecondBrain

./: .gitignore  CLAUDE.md  FILE_READING_FIX_SUMMARY.md  FILE_READING_PARAMETER_ERROR_FIX.md  FILE_UPLOAD_400_ERROR_FIX.md  QUICKSTART.md  README.md  README_SCRIPTS.md  RIGHT_SIDEBAR_FILE_AI_INTEGRATION_GUIDE.md  SIDEBAR_TO_CHAT_TROUBLESHOOTING.md  STREAMING_OUTPUT_GUIDE.md  TENCENT_CLOUD_DEPLOY.md  UPLOAD_FIX_FINAL.md  cloud-deploy.sh  create-demo-data.py  create-demo.sh  docker-compose.override.yml  docker-compose.yml  start.sh  tencent-deploy.sh  test.sh  update.sh
backend/: .env.example  .gitignore  API_ENDPOINTS_REPORT.md  API_ROUTES_SUMMARY.md  Dockerfile  Dockerfile.prod  README.md  SecondBrain_Postman_Collection.json  alembic.ini  check_services.py  docker-compose.yml  pyproject.toml  test_token.txt
backend/alembic/: env.py
backend/alembic/versions/: 3e579dc16df9_add_message_branch_fields.py  6bf7957f7aa9_fix_metadata_column_naming.py  add_last_login_field.py  add_user_custom_models.py  ca26db314b38_initial_migration_with_fixed_updated_at.py  update_chat_modes.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  password.py  rate_limiter.py
backend/app/crud/: __init__.py  annotation.py  base.py  citation.py  conversation.py  document.py  message.py  note.py  note_version.py  space.py  user.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  agents.py  annotation.py  auth.py  chat.py  citation.py  conversation_branch.py  conversations.py  custom_models.py  documents.py  export.py  note.py  note_version.py  ollama.py  spaces.py  users.py  web_import.py
backend/app/services/: __init__.py  agent_service.py  ai_service.py  ai_service_simple.py  annotation_service.py  bibtex_service.py  branch_service.py  chat_service.py  citation_service.py  conversation_service.py  deep_research_service.py  document_content_service.py  document_service.py  document_service_simple.py  export_service.py  multimodal_helper.py  note_service.py  (+5 more)
backend/docs/: API.md  API_COMPLETE_REFERENCE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  BACKEND_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  FINAL_API_TEST_REPORT.md  FRONTEND_API_EXAMPLES.md  FRONTEND_CHECKLIST.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_TESTING_GUIDE.md  LOCAL_TEST_CHECKLIST.md  LOGIN_METHODS_GUIDE.md  OPENROUTER_SETUP.md  POSTMAN_TEST_GUIDE.md  QUICKSTART.md  README.md  SIMPLE_DEPLOYMENT.md  TEST_RESULTS.md
backend/tests/: README.md  conftest.py  e2e_test.py  simple_e2e_test.py  test_ai_service.py  test_all_endpoints.py  test_connection.py  test_crud_layer.py  test_debug.py  test_example.py  test_setup.py  test_v2_endpoints.py
backend/tools/: README.md  api_test_suite.py  database_cleaner.py  demo_data.py  demo_data_creator.py  frontend_quick_test.py  integration_test.py  openrouter_test.py  performance_test_suite.py  simple_api_test.html  simple_test_server.py  test_api.py  test_deep_research.py  test_models.py  test_web_interface.html  test_web_interface_enhanced.html  web_test_server.py
(+336 files in other folders)
